--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </style>
 
         <link rel="icon" type="image/gif" href="favicon.gif"/>
-        <link rel="alternate" type="application/atom+xml" title="Feed" href="https://apnews.serpent.ai/feed.xml">
+        <link rel="alternate" type="application/atom+xml" title="Feed" href="https://multiworld.news/feed.xml">
     </head>
 
     <body>
