--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
                     </p>
                 </header>
 
+                <h2 id="D20240406">April 6th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 1 [<a href="apworlds.html#WarioLand1">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Super Robot Wars 30 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240405">April 5th, 2024</h2>
 
                 <ul>
