--- a/apworlds.html
+++ b/apworlds.html
@@ -42,6 +42,10 @@
                         <a href="index.html">News</a> (<a href="feed.xml">Atom Feed</a>)<br/>
                         <a href="apworlds.html">APWorlds</a>
                     </p>
+
+                    <p>
+                        <strong>Alternative Resource:</strong> <a href="https://docs.google.com/spreadsheets/d/1HZvn4wSjb633Uxu2o8oHambwP0aAax4XnADidn3xs3g/edit#gid=58422002">Community-Maintained Google Sheet</a>
+                    </p>
                 </header>
 
                 <h2>APWorlds (147)</h2>
@@ -1228,6 +1232,7 @@
                     <li><strong>Game Mod</strong> [<a href="https://github.com/silent-destroyer/tunic-randomizer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SapphireSapphic/TunicTracker/releases">Link</a>]</li>
                     <li><strong>Tracker (Entrances)</strong> [<a href="https://scipiowright.gitlab.io/tunic-tracker/">Link</a>]</li>
+                    <li><strong>Tracker (Entrances - Alternate)</strong> [<a href="https://tunic.werefox.cafe/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/TUNIC/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224388891948093540">Link</a>]</li>
                 </ul>
