--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                 <h2 id="D20240406">April 6th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ocarina of Time but it's just Master Quest Water Temple [<a href="apworlds.html#OcarinaOfTimeMQWaterTemple">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Wario Land 1 [<a href="apworlds.html#WarioLand1">Link</a>]</li>
                 </ul>
