--- a/apworlds.html
+++ b/apworlds.html
@@ -130,7 +130,7 @@
                 <ul>
                     <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1218379328317030401">Link</a>]</li>
                     <li><strong>Game Download</strong> [<a href="https://www.maddymakesgames.com/">Link</a>]</li>
-                    <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1225693326024380446">Link</a>]</li>
+                    <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1226462881759887460">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1215523955952193607">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1194062970230165554">Link</a>]</li>
                 </ul>
@@ -1314,6 +1314,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Download (HTML File)</strong> [<a href="https://github.com/spinerak/YachtDiceAP/releases">Link</a>]</li>
+                    <li><strong>Hosted Game</strong> [<a href="http://yacht-dice-ap.netlify.app/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1217570899549491411/1222977828174434385">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1217570899549491411">Link</a>]</li>
                 </ul>
