--- a/apworlds.html
+++ b/apworlds.html
@@ -862,6 +862,7 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>APWorld (ROM-Free Generation)</strong> [<a href="https://github.com/Zunawe/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/AliceMousie/emerald-ap-tracker/releases">Link</a>]</li>
+                    <li><strong>Tracker (Entrances)</strong> [<a href="https://zuils.github.io/pokemon-tracker/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Pokemon%20Emerald/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236871468711966">Link</a>]</li>
                 </ul>
@@ -1332,7 +1333,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1019742281311457321/1175924587230404659">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1224389973336133743/1224394834857427045">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Yoshi's%20Island/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389973336133743">Link</a>]</li>
                 </ul>
