--- a/index.html
+++ b/index.html
@@ -47,18 +47,29 @@
                 <h2 id="D20240407">April 7th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
                     <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Dome Keeper [<a href="apworlds.html#DomeKeeper">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Hyrule Warriors Definitive Edition [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Super Robot Wars 30 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Zelda CD-I [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Bejeweled 3 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240406">April 6th, 2024</h2>
