--- a/apworlds.html
+++ b/apworlds.html
@@ -48,7 +48,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (147)</h2>
+                <h2>APWorlds (148)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -1154,9 +1154,9 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1219698859958079741">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1227099242548432906">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2922217554">Link</a>]</li>
-                    <li><strong>Beta Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1219698859958079741">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1227099242548432906">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SerpentAI/TerrariaAPTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Terraria/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148330488482767008">Link</a>]</li>
@@ -1236,6 +1236,13 @@
                     <li><strong>Tracker (Entrances - Alternate)</strong> [<a href="https://tunic.werefox.cafe/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/TUNIC/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224388891948093540">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Tyrian"></span> Tyrian (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Download</strong> [<a href="https://github.com/KScl/TyrianArchipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1224498137570349076">Link</a>]</li>
                 </ul>
 
                 <h3><span id="U"></span><span id="ULTRAKILL"></span> ULTRAKILL (PC)</h3>
@@ -1351,6 +1358,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Rensen3/ArchipelagoYGO06/releases">Link</a>]</li>
+                    <li><strong>APWorld (ROM-Free Generation)</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1033397869421531236/1226921206201192541">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Rensen3/ArchipelagoYGO06/blob/yugioh06/worlds/yugioh06/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1033397869421531236">Link</a>]</li>
                 </ul>
