--- a/apworlds.html
+++ b/apworlds.html
@@ -1241,7 +1241,9 @@
                 <h3><span id="Tyrian"></span> Tyrian (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Game Download</strong> [<a href="https://github.com/KScl/TyrianArchipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld + Game Mod Download</strong> [<a href="https://github.com/KScl/TyrianArchipelago/releases">Link</a>]</li>
+                    <li><strong>Game Download</strong> [<a href="https://www.gog.com/en/game/tyrian_2000">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/KScl/TyrianAPWorld/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1224498137570349076">Link</a>]</li>
                 </ul>
 
