--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                     </p>
                 </header>
 
+                <h2 id="D20240409">April 9th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240408">April 8th, 2024</h2>
 
                 <ul>
