--- a/apworlds.html
+++ b/apworlds.html
@@ -99,6 +99,14 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/827141303330406408">Link</a>]</li>
                 </ul>
 
+                <h3><span id="Aquaria"></span> Aquaria (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> Download them from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1169389087371841708/1184993903259177091">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/BetaSprite/ARNFArchipelago/blob/main/worlds/ARNF/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1169389087371841708">Link</a>]</li>
+                </ul>
+
                 <h3><span id="ARobotNamedFight"></span> A Robot Named Fight! (PC)</h3>
 
                 <ul>
@@ -148,6 +156,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Beta APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1079931647320932412/1227477372140392489">Link</a>]</li>
                     <li><strong>Client</strong> [<a href="https://idle.multiworld.link/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ArchipelagoMW/Archipelago/blob/main/worlds/archipidle/docs/guide_en.md">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1079931647320932412">Link</a>]</li>
@@ -1095,7 +1104,7 @@
                 <h3><span id="SuperJunkoid"></span> Super Junkoid (Super Metroid Hack) (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1225853825852637184">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1227272726964605018">Link</a>]</li>
                     <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1225853825852637184">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1196920710724071555">Link</a>]</li>
                 </ul>
