--- a/index.html
+++ b/index.html
@@ -44,14 +44,33 @@
                     </p>
                 </header>
 
+                <h2 id="D20240410">April 10th, 2024</h2>
+                
+                <ul>
+                    <li><strong>New Beta APWorld</strong> ArchipIDLE [<a href="apworlds.html#ArchipIDLE">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Yu-Gi-Oh! Forbidden Memories [<a href="apworlds.html#YuGiOhForbiddenMemories">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240409">April 9th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update Merged</strong> Hollow Knight: <em>Godhome Goal Logic</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2952">Link</a>]</li>
+                    <li><strong>Game Update Merged</strong> Risk of Rain 2: <em>Progressive Stage Options</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2813">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240408">April 8th, 2024</h2>
