--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 
                 <ul>
                     <li><strong>New Beta APWorld</strong> ArchipIDLE [<a href="apworlds.html#ArchipIDLE">Link</a>]</li>
+                    <li><strong>New Beta APWorld</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
                 </ul>
 
                 <ul>
