--- a/apworlds.html
+++ b/apworlds.html
@@ -48,7 +48,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (148)</h2>
+                <h2>APWorlds (150)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -241,6 +241,14 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224387731782893731">Link</a>]</li>
                 </ul>
 
+                <h3><span id="CastlevaniaCircleOfTheMoon"></a> Castlevania: Circle of the Moon (GBA)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/LiquidCat64/LiquidCatipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/LiquidCat64/LiquidCatipelago/blob/CVCotM/worlds/cvcotm/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1220211910700564581">Link</a>]</li>
+                </ul>
+
                 <h3><span id="CastlevaniaLegacyOfDarkness"></a> Castlevania Legacy of Darkness (N64)</h3>
 
                 <ul>
@@ -356,6 +364,15 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/PoryGone/DKC3_AP_Tracker/releases/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Donkey%20Kong%20Country%203/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1005246223277641809">Link</a>]</li>
+                </ul>
+
+                <h3><span id="DontStarveTogether"></a> Don't Starve Together (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/DragonWolfLeo/Archipelago-DST/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3218471273">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Arrcival/ArchipelagoDK/blob/main/worlds/dome_keeper/docs/dome-keeper_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1195385214877306921">Link</a>]</li>
                 </ul>
 
                 <h3><span id="DOOM1993"></span> DOOM 1993 (PC)</h3>
