--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                 </header>
 
                 <h2 id="D20240410">April 10th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                </ul>
                 
                 <ul>
                     <li><strong>New Beta APWorld</strong> ArchipIDLE [<a href="apworlds.html#ArchipIDLE">Link</a>]</li>
@@ -52,6 +62,7 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Tracker Update</strong> Kingdom Hearts 2 [<a href="apworlds.html#KingdomHearts2">Link</a>]</li>
                     <li><strong>Tracker Update</strong> Yu-Gi-Oh! Forbidden Memories [<a href="apworlds.html#YuGiOhForbiddenMemories">Link</a>]</li>
                 </ul>
 
