--- a/apworlds.html
+++ b/apworlds.html
@@ -48,7 +48,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (150)</h2>
+                <h2>APWorlds (151)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -102,9 +102,8 @@
                 <h3><span id="Aquaria"></span> Aquaria (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Game Mod</strong> Download them from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1169389087371841708/1184993903259177091">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/BetaSprite/ARNFArchipelago/blob/main/worlds/ARNF/docs/setup_en.md">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1169389087371841708">Link</a>]</li>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1211781531199078440">Link</a>]</li>
                 </ul>
 
                 <h3><span id="ARobotNamedFight"></span> A Robot Named Fight! (PC)</h3>
