--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
                     </p>
                 </header>
 
+                <h2 id="D20240411">April 11th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> New Super Mario Bros Wii [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240410">April 10th, 2024</h2>
 
                 <ul>
