--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                     </p>
                 </header>
 
+                <h2 id="D20240412">April 12th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update Merged</strong> ArchipIDLE: <em>2024 Version</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3079">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240411">April 11th, 2024</h2>
 
                 <ul>
@@ -52,12 +62,19 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> ChecksFinder [<a href="apworlds.html#ChecksFinder">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Guardian Legend [<a href="apworlds.html#TheGuardianLegend">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update Merged</strong> Muse Dash: <em>Update songs to 4.2.0 + New trap</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3053">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> New Super Mario Bros Wii [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Powerwash Simulator [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
