--- a/index.html
+++ b/index.html
@@ -47,11 +47,23 @@
                 <h2 id="D20240412">April 12th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 2 Remake [<a href="apworlds.html#ResidentEvil2Remake">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 2 Remake [<a href="apworlds.html#ResidentEvil2Remake">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Update Merged</strong> ArchipIDLE: <em>2024 Version</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3079">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240411">April 11th, 2024</h2>
