--- a/apworlds.html
+++ b/apworlds.html
@@ -378,7 +378,8 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Mod</strong> [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> Version 1.0.3 [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Prerelease APWorld + Game Mod</strong> Version 1.0.4+ [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ozone31/doom-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/DOOM%201993/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148329739996643348">Link</a>]</li>
@@ -388,7 +389,8 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Mod</strong> [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> Version 1.0.3 [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Prerelease APWorld + Game Mod</strong> Version 1.0.4+ [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ozone31/doomii-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/DOOM%20II/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236810487738510">Link</a>]</li>
@@ -535,7 +537,8 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Mod</strong> [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> Version 1.0.3 [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Prerelease APWorld + Game Mod</strong> Version 1.0.4+ [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Forsaken-angel/heretic-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Heretic/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236842515439627">Link</a>]</li>
