--- a/index.html
+++ b/index.html
@@ -44,6 +44,30 @@
                     </p>
                 </header>
 
+                <h2 id="D20240413">April 13th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Neon White [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Prerelease Game Mod</strong> DOOM 1993 [<a href="apworlds.html#DOOM1993">Link</a>]</li>
+                    <li><strong>New Prerelease Game Mod</strong> DOOM II [<a href="apworlds.html#DOOM2">Link</a>]</li>
+                    <li><strong>New Prerelease Game Mod</strong> Heretic [<a href="apworlds.html#Heretic">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Prerelease APWorld</strong> DOOM 1993 [<a href="apworlds.html#DOOM1993">Link</a>]</li>
+                    <li><strong>New Prerelease APWorld</strong> DOOM II [<a href="apworlds.html#DOOM2">Link</a>]</li>
+                    <li><strong>New Prerelease APWorld</strong> Heretic [<a href="apworlds.html#Heretic">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240412">April 12th, 2024</h2>
 
                 <ul>
