--- a/apworlds.html
+++ b/apworlds.html
@@ -244,6 +244,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/LiquidCat64/LiquidCatipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1220211910700564581/1228916279369535509">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/LiquidCat64/LiquidCatipelago/blob/CVCotM/worlds/cvcotm/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1220211910700564581">Link</a>]</li>
                 </ul>
