--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Game Update Merged</strong> Link's Awakening DX: <em>Add "boots controls" option</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2085">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Manual APWorld Update</strong> Neon White [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
@@ -66,6 +70,10 @@
                     <li><strong>New Prerelease APWorld</strong> DOOM 1993 [<a href="apworlds.html#DOOM1993">Link</a>]</li>
                     <li><strong>New Prerelease APWorld</strong> DOOM II [<a href="apworlds.html#DOOM2">Link</a>]</li>
                     <li><strong>New Prerelease APWorld</strong> Heretic [<a href="apworlds.html#Heretic">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240412">April 12th, 2024</h2>
