--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
                     </p>
                 </header>
 
+                <h2 id="D20240414">April 14th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Duke Nukem 3D [<a href="apworlds.html#DukeNukem3D">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Duke Nukem 3D [<a href="apworlds.html#DukeNukem3D">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Super Mario 64 [<a href="apworlds.html#SuperMario64">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240413">April 13th, 2024</h2>
 
                 <ul>
