--- a/apworlds.html
+++ b/apworlds.html
@@ -528,7 +528,7 @@
                 <h3><span id="Hammerwatch"></span> Hammerwatch (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1198310674665836604">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1229224858144211035">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago-Mod-Installer/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago/blob/dev/worlds/hammerwatch/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1072687192360624218">Link</a>]</li>
@@ -550,6 +550,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/TheMulhima/Lumafly/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/ArchipelagoMW-HollowKnight/Archipelago.APMapMod/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Hollow%20Knight/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959203442570715176">Link</a>]</li>
                 </ul>
