--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
                 <h2 id="D20240414">April 14th, 2024</h2>
 
                 <ul>
+                    <li><strong>AP Release Candidate</strong> 0.4.6 RC1 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1229143499648274443">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>APWorld Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Duke Nukem 3D [<a href="apworlds.html#DukeNukem3D">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Faxanadu [<a href="apworlds.html#Faxanadu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -57,6 +65,8 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Tracker Update</strong> Hollow Knight [<a href="apworlds.html#HollowKnight">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
                     <li><strong>Tracker Update</strong> Super Mario 64 [<a href="apworlds.html#SuperMario64">Link</a>]</li>
                 </ul>
 
