--- a/apworlds.html
+++ b/apworlds.html
@@ -48,7 +48,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (151)</h2>
+                <h2>APWorlds (152)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -103,6 +103,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/tioui/Archipelago/blob/main/worlds/aquaria/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1211781531199078440">Link</a>]</li>
                 </ul>
 
@@ -1075,6 +1076,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/PoryGone/SA2B_AP_Tracker/releases/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Sonic%20Adventure%202%20Battle/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/980554290798145566">Link</a>]</li>
+                </ul>
+
+                <h3><span id="SoulBlazer"></span> Soul Blazer (SNES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Tranquilite0/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Tranquilite0/Archipelago/blob/soulblazer/worlds/soulblazer/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1209689725057761310">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Stacklands"></span> Stacklands (PC)</h3>
