--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                     </p>
                 </header>
 
+                <h2 id="D20240415">April 15th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Mega Man 2 [<a href="apworlds.html#MegaMan2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240414">April 14th, 2024</h2>
 
                 <ul>
@@ -52,6 +62,7 @@
 
                 <ul>
                     <li><strong>APWorld Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Duke Nukem 3D [<a href="apworlds.html#DukeNukem3D">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Faxanadu [<a href="apworlds.html#Faxanadu">Link</a>]</li>
@@ -61,6 +72,7 @@
 
                 <ul>
                     <li><strong>Game Mod Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Duke Nukem 3D [<a href="apworlds.html#DukeNukem3D">Link</a>]</li>
                 </ul>
 
