--- a/apworlds.html
+++ b/apworlds.html
@@ -237,6 +237,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Prerelease APWorld</strong> APPP Edition [<a href="https://github.com/LiquidCat64/LiquidCatipelago/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Castlevania%2064/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224387731782893731">Link</a>]</li>
                 </ul>
@@ -245,7 +246,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/LiquidCat64/LiquidCatipelago/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1220211910700564581/1228916279369535509">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1220211910700564581/1229652563029131325">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/LiquidCat64/LiquidCatipelago/blob/CVCotM/worlds/cvcotm/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1220211910700564581">Link</a>]</li>
                 </ul>
