--- a/index.html
+++ b/index.html
@@ -44,14 +44,49 @@
                     </p>
                 </header>
 
+                <h2 id="D20240416">April 16th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yu-Gi-Oh! Ultimate Masters: WCT 2006 [<a href="apworlds.html#YuGiOhUltimateMastersWCT2006">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Kingdom Hearts 2 [<a href="apworlds.html#KingdomHearts2">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240415">April 15th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man 2 [<a href="apworlds.html#MegaMan2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Rabi-Ribi [<a href="apworlds.html#RabiRibi">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Monster Hunter Rise [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>New APWorld</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Prerelease APWorld</strong> Castlevania 64 [<a href="apworlds.html#Castlevania64">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240414">April 14th, 2024</h2>
@@ -71,9 +106,19 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Core Update Merged</strong> MultiServer: add all worlds goal completion message [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2956">Link</a>]</li>
+                    <li><strong>Core Update Merged</strong> MultiServer: Support location name groups in !missing and !checked commands [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2538">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Game Mod Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Duke Nukem 3D [<a href="apworlds.html#DukeNukem3D">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update Merged</strong> Muse Dash: <em>Add filler items and rework generation balance</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2809">Link</a>]</li>
+                    <li><strong>Game Update Merged</strong> Subnautica: <em>Filler items distribution</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3104">Link</a>]</li>
                 </ul>
 
                 <ul>
