--- a/apworlds.html
+++ b/apworlds.html
@@ -931,6 +931,7 @@
                 <ul>
                     <li><strong>APWorld + Setup Guide</strong> [<a href="https://github.com/Akashortstack/Psychonauts_AP/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Akashortstack/PsychoRando/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Mysteryem/Psychonauts_AP_PopTracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191273397976584212">Link</a>]</li>
                 </ul>
 
