--- a/index.html
+++ b/index.html
@@ -44,12 +44,40 @@
                     </p>
                 </header>
 
+                <h2 id="D20240417">April 17th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240416">April 16th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Yu-Gi-Oh! Ultimate Masters: WCT 2006 [<a href="apworlds.html#YuGiOhUltimateMastersWCT2006">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Stray [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                 </ul>
 
                 <ul>
