--- a/apworlds.html
+++ b/apworlds.html
@@ -1146,6 +1146,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/RBmans/SM64APMoveRandoPopTracker/releases">Link</a>]</li>
+                    <li><strong>Tracker (Alternate)</strong> [<a href="https://github.com/RaceProUK/SM64EX-APTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Super%20Mario%2064/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/937206798014898186">Link</a>]</li>
                 </ul>
@@ -1195,9 +1196,9 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1227099242548432906">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1230362616363352138">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2922217554">Link</a>]</li>
-                    <li><strong>Beta Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1227099242548432906">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1230362616363352138">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SerpentAI/TerrariaAPTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Terraria/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148330488482767008">Link</a>]</li>
