--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
                     </p>
                 </header>
 
+                <h2 id="D20240418">April 18th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Super Mario 64 [<a href="apworlds.html#SuperMario64">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240417">April 17th, 2024</h2>
 
                 <ul>
@@ -53,9 +69,25 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Beta APWorld Update</strong> Terraria [<a href="apworlds.html#Terraria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Terraria [<a href="apworlds.html#Terraria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> DLC Quest [<a href="apworlds.html#DLCQuest">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Prerelease Game Mod Update</strong> DOOM 1993 [<a href="apworlds.html#DOOM1993">Link</a>]</li>
+                    <li><strong>Prerelease Game Mod Update</strong> DOOM II [<a href="apworlds.html#DOOM2">Link</a>]</li>
+                    <li><strong>Prerelease Game Mod Update</strong> Heretic [<a href="apworlds.html#Heretic">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240416">April 16th, 2024</h2>
@@ -114,6 +146,7 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Tracker Update</strong> Noita [<a href="apworlds.html#Noita">Link</a>]</li>
                     <li><strong>Tracker Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
                 </ul>
 
