--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                 <h2 id="D20240418">April 18th, 2024</h2>
 
                 <ul>
+                    <li><strong>AP Release Candidate</strong> 0.4.6 RC2 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1230567184217014294">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
@@ -54,10 +59,23 @@
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Noita [<a href="apworlds.html#Noita">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update Merged</strong> Castlevania 64: <em>Use AP Procedure Patch (ROM-Free Generation)</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3159">Link</a>]</li>
+                    <li><strong>Game Update Merged</strong> Lingo: <em>The Pilgrim Update</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2884">Link</a>]</li>
+                    <li><strong>Game Update Merged</strong> Noita: <em>Add Meat Realm</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3119">Link</a>]</li>
+                    <li><strong>Game Update Merged</strong> Noita: <em>Add the new bosses to the check pool</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3170">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Tracker Update</strong> Super Mario 64 [<a href="apworlds.html#SuperMario64">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240417">April 17th, 2024</h2>
