--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
                     <li><strong>APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Noita [<a href="apworlds.html#Noita">Link</a>]</li>
                 </ul>
 
@@ -71,6 +73,7 @@
 
                 <ul>
                     <li><strong>New Manual APWorld</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Skyrim Special Edition: Legacy of the Dragonborn [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
