--- a/apworlds.html
+++ b/apworlds.html
@@ -138,7 +138,7 @@
                 <ul>
                     <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1229014956771643522">Link</a>]</li>
                     <li><strong>Game Download</strong> [<a href="https://www.maddymakesgames.com/">Link</a>]</li>
-                    <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1229014956771643522">Link</a>]</li>
+                    <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1231120951366783027">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1215523955952193607">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1194062970230165554">Link</a>]</li>
                 </ul>
@@ -894,7 +894,7 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>APWorld (ROM-Free Generation)</strong> [<a href="https://github.com/Zunawe/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/AliceMousie/emerald-ap-tracker/releases">Link</a>]</li>
-                    <li><strong>Tracker (Entrances)</strong> [<a href="https://zuils.github.io/pokemon-tracker/">Link</a>]</li>
+                    <!-- <li><strong>Tracker (Entrances)</strong> [<a href="https://zuils.github.io/pokemon-tracker/">Link</a>]</li> -->
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Pokemon%20Emerald/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236871468711966">Link</a>]</li>
                 </ul>
