--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
                     </p>
                 </header>
 
+                <h2 id="D20240420">April 20th, 2024</h2>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240419">April 19th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> ChecksFinder [<a href="apworlds.html#ChecksFinder">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240418">April 18th, 2024</h2>
 
                 <ul>
