--- a/apworlds.html
+++ b/apworlds.html
@@ -894,7 +894,6 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>APWorld (ROM-Free Generation)</strong> [<a href="https://github.com/Zunawe/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/AliceMousie/emerald-ap-tracker/releases">Link</a>]</li>
-                    <!-- <li><strong>Tracker (Entrances)</strong> [<a href="https://zuils.github.io/pokemon-tracker/">Link</a>]</li> -->
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Pokemon%20Emerald/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236871468711966">Link</a>]</li>
                 </ul>
@@ -905,6 +904,7 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Beta APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1043592720603693167/1220572862985801798">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/j-imbo/pkmnrb_jim/releases">Link</a>]</li>
+                    <li><strong>Tracker (Entrances)</strong> Needs to be loaded from the cogwheel icon [<a href="https://zuils.github.io/pokemon-tracker/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Pokemon%20Red%20and%20Blue/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043592720603693167">Link</a>]</li>
                 </ul>
