--- a/apworlds.html
+++ b/apworlds.html
@@ -48,7 +48,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (152)</h2>
+                <h2>APWorlds (153)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -477,6 +477,13 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1100823015819837449">Link</a>]</li>
                 </ul>
 
+                <h3><span id="FinalFantasyXIIOpenWorld"></span> Final Fantasy XII: Open World (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod + Setup Guide</strong> [<a href="https://github.com/Bartz24/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1229091295465570456">Link</a>]</li>
+                </ul>
+
                 <h3><span id="FinalFantasyXIITrialMode"></span> Final Fantasy XII: Trial Mode (PC)</h3>
 
                 <ul>
@@ -530,7 +537,7 @@
                 <h3><span id="Hammerwatch"></span> Hammerwatch (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1229224858144211035">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1231465960318177321">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago-Mod-Installer/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago/blob/dev/worlds/hammerwatch/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1072687192360624218">Link</a>]</li>
