--- a/index.html
+++ b/index.html
@@ -44,10 +44,34 @@
                     </p>
                 </header>
 
+                <h2 id="D20240421">April 21st, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240420">April 20th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Game Mod Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Final Fantasy XII: Open World (PC) [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Conan Exiles [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240419">April 19th, 2024</h2>
