--- a/index.html
+++ b/index.html
@@ -44,14 +44,41 @@
                     </p>
                 </header>
 
-                <h2 id="D20240424">April 24th, 2024</h2>
+                <h2 id="D20240425">April 25th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>New APWorld</strong> Resident Evil 3 Remake [<a href="apworlds.html#ResidentEvil3Remake">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240424">April 24th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> ChecksFinder [<a href="apworlds.html#ChecksFinder">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Manual APWorld Update</strong> LEGO Batman: The Videogame [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Celeste 64 [<a href="apworlds.html#Celeste64">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> Celeste 64 [<a href="apworlds.html#Celeste64">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240423">April 23rd, 2024</h2>
@@ -112,7 +139,6 @@
                 <ul>
                     <li><strong>Manual APWorld Update</strong> LEGO Batman: The Videogame [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
-                    <li><strong>Manual APWorld Update</strong> Pokeclicker [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Skyrim Special Edition [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
@@ -1181,10 +1207,6 @@
                 <ul>
                     <li><strong>New Game Merged</strong> Zork Grand Inquisitor [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2539">Link</a>]</li>
                 </ul>
-
-                <ul>
-                    <li><strong>New Manual APWorld</strong> Pokeclicker [<a href="apworlds.html#Manual">Link</a>]</li>
-                </ul>
                 
                 <h2 id="D20240314">March 14th, 2024</h2>
 
@@ -1345,10 +1367,6 @@
                 </ul>
 
                 <ul>
-                    <li><strong>New Manual APWorld</strong> Arcobblego (Cobblemon for Archipelago) [<a href="apworlds.html#Manual">Link</a>]</li>
-                </ul>
-
-                <ul>
                     <li><strong>Tracker Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
                 </ul>
 
@@ -1475,10 +1493,6 @@
 
                 <ul>
                     <li><strong>Game Mod Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
-                </ul>
-
-                <ul>
-                    <li><strong>Manual APWorld Update</strong> Pokemon Showdown [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
