--- a/apworlds.html
+++ b/apworlds.html
@@ -48,7 +48,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (156)</h2>
+                <h2>APWorlds (157)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -281,7 +281,9 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Beta APWorld</strong> v1.2.x [<a href="https://github.com/PoryGoneDev/Celeste64/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/PoryGoneDev/Celeste64/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> v1.2.x [<a href="https://github.com/PoryGoneDev/Celeste64/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Celeste%2064/guide/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224388599160635552">Link</a>]</li>
                 </ul>
@@ -978,6 +980,15 @@
                     <li><strong>Game Mod</strong> [<a href="https://github.com/FuzzyGamesOn/RE2R_AP_Client/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/FuzzyGamesOn/RE2R_AP_World/blob/main/README.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1096638934857031770">Link</a>]</li>
+                </ul>
+
+                <h3><span id="ResidentEvil3Remake"></span> Resident Evil 3 Remake (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/dontjoome/RE3R_AP_World/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/dontjoome/RE3R_AP_Client">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/1085716850370957462/1212095220657692702/1232907046089654314">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1212095220657692702">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Reventure"></span> Reventure (PC)</h3>
