--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Genshin Impact [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New APWorld</strong> Resident Evil 3 Remake [<a href="apworlds.html#ResidentEvil3Remake">Link</a>]</li>
                 </ul>
 
